--- a/OnlineStore/Views/Category/Index.cshtml
+++ b/OnlineStore/Views/Category/Index.cshtml
@@ -26,8 +26,8 @@
                 <td>@category.Id</td>
                 <td>@category.CategoryName</td>
                 <td>@category.Description</td>
-                <td><a asp-controller="Category" asp-action="Update" asp-route-id="@category.Id" type="button" class="btn btn-info" style="width:150px">Update</a></td>
-                <td><a asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id" type="button" class="btn btn-danger" style="width:150px">Delete</a></td>
+                    <td><a asp-controller="Category" asp-action="Update" asp-route-id="@category.Id" type="button" class="btn btn-info" style="width:150px"><i class="fa fa-cog" aria-hidden="true"></i> Update</a></td>
+                    <td><a asp-controller="Category" asp-action="Delete" asp-route-id="@category.Id" type="button" class="btn btn-danger" style="width:150px"><i class="fa fa-trash" aria-hidden="true"></i> Delete</a></td>
             </tr>
         }
         
