--- a/OnlineStore/Views/Home/Categories.cshtml
+++ b/OnlineStore/Views/Home/Categories.cshtml
@@ -1,5 +1,5 @@
-﻿@using OnlineStore.Models.DTOs
-@model HomeViewDto
+﻿@using OnlineStore.Models.ViewModels
+@model HomeViewModel
 
 <div class="container">
     <div class="row">
