--- a/OnlineStore/Views/Order/Delete.cshtml
+++ b/OnlineStore/Views/Order/Delete.cshtml
@@ -1,9 +1,14 @@
-﻿@using OnlineStore.Models.Concrete
+﻿@using OnlineStore.Models.Entities
 @model Order
 
 <form method="post">
-    @*<input asp-for="Id" hidden /> Burda Biz Her sınıfın ve özellğin adını uygun verdiğimiz için mapleme yapmadan .net algılıyor ancak mapleme yapmamız gerekseydi metoda gidecek özelliği bu şekilde göndermemiz gerekirdi.*@
-    @*<input asp-for="Id" hidden />*@
+   
+    <input asp-for="AdressName" hidden />
+    <input asp-for="OrderLines" hidden />
+    <input asp-for="OrderDate" hidden />
+    <input asp-for="Total" hidden />
+    <input asp-for="UserId" hidden />
+    <input asp-for="OrderNumber" hidden />
     <div class="border p-3 mt-5">
         <div class="row pb-3">
             <h2 class="text-primary">Delete Order</h2>
@@ -11,17 +16,63 @@
         </div>
 
         <div class="mb-3">
-            <label asp-for="CustomerId" class="p-0"></label>
-            <input asp-for="CustomerId" disabled class="form-control" />
+            <label asp-for="Id" class="p-0"></label>
+            <input asp-for="Id" class="form-control" disabled />
+        </div>
+         <div class="mb-3">
+        <label asp-for="UserId" class="p-0"></label>
+        <input asp-for="UserId" class="form-control" disabled />
         </div>
         <div class="mb-3">
-            <label asp-for="OrderDate" class="p-0"></label>
-            <input asp-for="OrderDate" disabled class="form-control" />
+        <label asp-for="OrderDate" class="p-0"></label>
+        <input asp-for="OrderDate" class="form-control" disabled />
         </div>
         <div class="mb-3">
-            <label asp-for="ShipCity" class="p-0"></label>
-            <input asp-for="ShipCity" disabled class="form-control" />
+        <label asp-for="Total" class="p-0"></label>
+        <input asp-for="Total" class="form-control" disabled />
         </div>
+        <div class="mb-3">
+            <label asp-for="OrderState" class="p-0"></label>
+            <select asp-for="OrderState" class="form-control" disabled>
+                <option value="">Lütfen Sipariş Durumu Seçiniz</option>
+                @foreach (var option in Enum.GetValues(typeof(OnlineStore.Models.Concrete.EnumOrderState)))
+                {
+                    <option value="@option">@option</option>
+                }
+            </select>
+            <span asp-validation-for="OrderState" class="text-primary"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="UserName" class="p-0"></label>
+            <input asp-for="UserName" class="form-control" disabled />
+            <span asp-validation-for="UserName" class="text-primary"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="Adress" class="p-0"></label>
+            <input asp-for="Adress" class="form-control" disabled />
+            <span asp-validation-for="Adress" class="text-primary"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="City" class="p-0"></label>
+            <input asp-for="City" class="form-control" disabled />
+            <span asp-validation-for="City" class="text-primary"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="District" class="p-0"></label>
+            <input asp-for="District" class="form-control" disabled />
+            <span asp-validation-for="District" class="text-primary"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="Street" class="p-0"></label>
+            <input asp-for="Street" class="form-control" disabled />
+            <span asp-validation-for="Street" class="text-primary"></span>
+        </div>
+        <div class="mb-3">
+            <label asp-for="HomeNo" class="p-0"></label>
+            <input asp-for="HomeNo" class="form-control" disabled />
+            <span asp-validation-for="HomeNo" class="text-primary"></span>
+        </div>
+       
         <button type="submit" class="btn btn-primary" style="width:250px">Delete</button>
 
         <a asp-controller="Order" asp-action="Index" class="btn btn-primary" style="width:250px">Back</a>
