--- a/OnlineStore/Views/Cart/Index.cshtml
+++ b/OnlineStore/Views/Cart/Index.cshtml
@@ -55,8 +55,12 @@
         </div>
     </div>
     <div class="text-center">
-        <a href="/Home/Categories" class="btn btn-primary">Alışverişe Devam Et</a>
-        <a href="/Cart/Checkout" class="btn btn-primary">Alışverişi Tamamla</a>
+        <a href="/Home/Categories" class="btn btn-primary">
+            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+            Alışverişe Devam Et</a>
+        <a href="/Cart/Checkout" class="btn btn-primary">
+            <i class="fa fa-check" aria-hidden="true"></i>
+            Alışverişi Tamamla</a>
     </div>
 }else
 {
