--- a/OnlineStore/Views/Home/Index.cshtml
+++ b/OnlineStore/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using OnlineStore.Models.Concrete
+﻿@using OnlineStore.Models.Entities
+
 @model List<Product>
 
 <div class="product-container">
@@ -15,7 +16,7 @@
                                 </div>
                                 <div class="product-desc">
                                     <span class="product-price">
-                                        @string.Format("{0:0.00}", product.UnitPrice)
+                                        @product.UnitPrice.ToString("c")
                                     </span>
                                      <small  class="text-muted">Category</small>
                                     <div class="product-name"> @product.ProductName</div>
@@ -24,7 +25,8 @@
                                     @TruncateString(product.Description, 50)
                                     </div>
                                     <div class="m-t text-righ">
-                                        <a asp-controller="Home" asp-action="ProductDetail" asp-route-id="@product.Id" class="btn btn-xs btn-outline btn-primary">Info <i class="fa fa-long-arrow-right"></i> </a>
+                                        <a asp-controller="Home" asp-action="ProductDetail" asp-route-id="@product.Id"
+                                        class="btn btn-xs btn-outline btn-primary">Info <i class="fa fa-long-arrow-right"></i> </a>
                                     </div>
                                 </div>
                             </div>
