--- a/OnlineStore/Views/Home/_ProductsPartial.cshtml
+++ b/OnlineStore/Views/Home/_ProductsPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@using OnlineStore.Models.Concrete
+﻿@using OnlineStore.Models.Entities
+
 @model List<Product>
 
     @if (Model.Count()==0)
@@ -27,7 +28,7 @@ else
                         </div>
                         <div class="product-desc">
                             <span class="product-price">
-                                @string.Format("{0:0.00}", product.UnitPrice)
+                                @product.UnitPrice.ToString("c")
                             </span>
                             <small class="text-muted">Category</small>
                             <div class="product-name"> @product.ProductName</div>
@@ -36,7 +37,8 @@ else
                                 @TruncateString(product.Description, 50)
                             </div>
                             <div class="m-t text-righ">
-                                <a asp-controller="Home" asp-action="ProductDetail" asp-route-id="@product.Id" class="btn btn-xs btn-outline btn-primary">Info <i class="fa fa-long-arrow-right"></i> </a>
+                                <a asp-controller="Home" asp-action="ProductDetail" asp-route-id="@product.Id" 
+                                class="btn btn-xs btn-outline btn-primary">Info <i class="fa fa-long-arrow-right"></i> </a>
                             </div>
                         </div>
                     </div>
@@ -244,3 +246,4 @@ else
     }
 
 </style>
+
