--- a/OnlineStore/Views/Product/Add.cshtml
+++ b/OnlineStore/Views/Product/Add.cshtml
@@ -1,4 +1,5 @@
-﻿@using OnlineStore.Models.Concrete
+﻿@using OnlineStore.Models.Entities
+
 @model Product
 
 <form method="post" enctype="multipart/form-data">
@@ -37,12 +38,16 @@
 
         <div class="mb-3">
             <label asp-for="ImageUrl" class="p-0"></label>
-            <input type="file" name="file" class="form-control" />
+            <input type="file" name="file" class="form-control" multiple/>
         </div>
 
-        <button type="submit" class="btn btn-primary" style="width:250px">Add</button>
+        <button type="submit" class="btn btn-primary" style="width:250px">
+            <i class="fa fa-check" aria-hidden="true"></i>
+            Add</button>
 
-        <a asp-controller="Product" asp-action="Index" class="btn btn-primary" style="width:250px">Back</a>
+        <a asp-controller="Product" asp-action="Index" class="btn btn-primary" style="width:250px">
+            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+            Back</a>
 
     </div>
 
