--- a/OnlineStore/Views/Product/Delete.cshtml
+++ b/OnlineStore/Views/Product/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@using OnlineStore.Models.Concrete
+﻿@using OnlineStore.Models.Entities
+
 @model Product
 
 <form method="post">
@@ -33,6 +34,8 @@
 
         <button type="submit" class="btn btn-primary" style="width:250px">Delete</button>
 
-        <a asp-controller="Product" asp-action="Index" class="btn btn-primary" style="width:250px">Back</a>
+        <a asp-controller="Product" asp-action="Index" class="btn btn-primary" style="width:250px">
+            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+            Back</a>
     </div>
 </form>
