--- a/OnlineStore/Views/Product/Update.cshtml
+++ b/OnlineStore/Views/Product/Update.cshtml
@@ -1,4 +1,5 @@
-﻿@using OnlineStore.Models.Concrete
+﻿@using OnlineStore.Models.Entities
+
 @model Product
 
 <form method="post" enctype="multipart/form-data">
@@ -42,9 +43,13 @@
                     <input type="file" name="file" class="form-control" />
                 </div>
 
-                <button type="submit" class="btn btn-primary" style="width:250px">Update</button>
+                <button type="submit" class="btn btn-primary" style="width:250px">
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                    Update</button>
 
-                <a asp-controller="Product" asp-action="Index" class="btn btn-primary" style="width:250px">Back</a>
+                <a asp-controller="Product" asp-action="Index" class="btn btn-primary" style="width:250px">
+                    <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                    Back</a>
 
             </div>
         </div>
