Add CategoryName Update

--- a/OnlineStore/Views/Cart/Completed.cshtml
+++ b/OnlineStore/Views/Cart/Completed.cshtml
@@ -3,8 +3,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h2>Siparişiniz Tamamlandı!</h2>
-            <h4>Satın aldığınız ürünler en kısa zamanda kargoya verilecektir.</h4>
+            <div class="align-content-center">
+                <h2>Siparişiniz Tamamlandı!</h2>
+                <h4>Satın aldığınız ürünler en kısa zamanda kargoya verilecektir.</h4>
+            </div>
         </div>
     </div>
 </div>
