--- a/OnlineStore/Views/Home/Index.cshtml
+++ b/OnlineStore/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
-﻿@using OnlineStore.Models.Entities
+﻿@using OnlineStore.Models.DTOs
 
-@model List<Product>
+@model List<ProductDetailDto>
 
 <div class="product-container">
     <div class="container">
@@ -12,13 +12,13 @@
                         
                             <div class="ibox-content product-box">
                                 <div class="product-image">
-                                    <img src="@product.ImageUrl" alt="@product.ProductName" />
+                                    <img src="@product.ImagePath" alt="@product.ProductName" />
                                 </div>
                                 <div class="product-desc">
                                     <span class="product-price">
                                         @product.UnitPrice.ToString("c")
                                     </span>
-                                     <small  class="text-muted">Category</small>
+                                     <small  class="text-muted">@product.CategoryName</small>
                                     <div class="product-name"> @product.ProductName</div>
 
                                     <div class="small m-t-xs">
